# jira-html-report

./: README.md  pyproject.toml
jira-report/: __init__.py
jira_report/: __init__.py  jira_report.py  report.py
samples/: sample.html  sample.ipynb  sample.py
