[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]]
build-backend = "setuptools.build_meta"

[project]
name = "jira-report"
description = "Generating Jira report to see issue trends."
authors = [{name = "freeyssu", email = "freeyssu@gmail.com"}]
license = {text = "Free"}
dependencies = [
    "jira",
    "plotly",
    "pandas",
    "jinja2"
]
readme = "README.md"
keywords = ["atlassian", "jira", "report"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/freeyssu/jira-report"

[tool.setuptools.packages.find]
where = ["."]
include = ["jira_report"]

[tool.setuptools_scm]

[tool.setuptools.package-data]
"*" = ["*.j2"]